app/overlays/dev/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: 128.203.219.86
    http:
      paths:
      - path: /dev
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
